<resources>
    <string name="app_name">basic-budget-app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to home screen -->
    <string name="view_budget">View Budget</string>
    <string name="import_google">Import from Google Drive</string>
    <string name="export_google">Export to Google Drive</string>
    <string name="account_info">My Account</string>
    <string name="to_web_view">Shop</string>

    <!-- Strings related to view-account screen -->
    <string name="balance">Enter your account balance: $0.00</string>
    <string name="create_account">Set Up My Account</string>
    <string name="bank_name">Enter your bank\'s name</string>
    <string name="bank_account_num">Enter your bank account number</string>


    <!-- Strings related to view-budget screen -->
    <string name="budget_bal">Account Balance</string>
    <string name="plus">+</string>
    <string name="income">Enter Total Income</string>
    <string name="minus">-</string>
    <string name="expenses">Enter Total Expenses</string>
    <string name="disp_income">Disposable Income</string>
    <string name="calculate">Calculate Disposable Income</string>


</resources>
